<resources>
    <string name="app_name">Mexico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">¡Bienvenido a Mexico!</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="tienda">Articulos</string>
    <string name="acetaminohpen">Acetaminohpen</string>
    <string name="tiendaT">Tienda</string>
    <string name="tienda2">Tienda</string>
    <string name="id">id</string>
    <string name="producto">Producto</string>
    <string name="buscar">Buscar</string>
    <string name="comprar">Comprar</string>
    <string name="registro">Registro</string>
    <string name="registro2">Registro</string>
    <string name="idProducto">ID</string>
    <string name="productoProducto">Producto</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="recibo">Recibo</string>
    <string name="tienda3">Tienda</string>
    <string name="menu">Menu</string>
    <string name="id_producto_precio">ID Producto Precio</string>
    <string name="_1_torta_normal_1_50">1 Torta normal $1.50</string>
    <string name="_2_torta_mixta_2_50">2 Torta mixta $2.50</string>
    <string name="_3_torta_vegana_3_50">3 Torta vegana $3.50</string>
    <string name="_4_gordita_1_50">4 Gordita $1.50</string>
    <string name="_5_tacos_1_50">5 Tacos $1.50</string>
    <string name="_6_birria_normal_1_25">6 Birria normal $1.25</string>
    <string name="_7_birria_grande_2_50">7 Birria grande $2.50</string>
    <string name="_8_ccacola_1_50">8 Ccacola $1.50</string>
    <string name="_9_pepsi_1_50">9 Pepsi $1.50</string>
    <string name="_10_agua_1_00">10 Agua $1.00</string>
    <string name="total">Total</string>
    <string name="ver_recibo">Ver recibo</string>

</resources>